<resources>
    <string name="app_name">Project</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="user_logo">user logo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="oh_la_la">Oh la la</string>
    <string name="name">Name</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>
    <string name="message">message</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="Fprofile">Profile</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="your_cart">Your Cart</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="today_s_deals">Today\'s Deals</string>
    <string name="your_account">Your Account</string>
    <string name="settings">Settings</string>
    <string name="customer_service">Customer Service</string>
    <string name="textview2">textview2</string>
    <string name="grand_total">Grand Total</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
