<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/your_cart"></item>
    <item
        android:id="@+id/previousOrders"
        android:icon="@drawable/ic_previous_order"
        android:title="@string/previous_orders" />
    <item
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/today_s_deals" />
    <item
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/your_account" />
    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:icon="@drawable/ic_customer_black_24dp"
        android:title="@string/customer_service" />
</menu>