<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cartRecycler"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/cartProductName"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/button"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cartQuanity"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/source_code_pro_light"
                android:text="@string/email"
                android:textColor="#5E4E4E"
                android:textSize="14sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/cartImageView"
            android:layout_width="116dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/dummy_content"
            android:src="@drawable/sweater" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>