<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/productName"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/email"
                android:textColor="#5E4E4E"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/email"
                android:textColor="#5E4E4E"
                android:textSize="20sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="237dp"
            android:layout_height="280dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/dummy_content"
            android:src="@drawable/sweater" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="236dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_bg"
        android:onClick="addToCart"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.799" />

</androidx.constraintlayout.widget.ConstraintLayout>